Fixed: Timer Alignment, Added: Redirection Link

--- a/style.css
+++ b/style.css
@@ -53,6 +53,10 @@ body {
   transform: scale(var(--scale-factor));
 }
 
+#first {
+  margin-left: 24px;
+}
+
 .container-timer::before {
   content: "";
   position: absolute;
@@ -123,15 +127,17 @@ small {
 }
 
 .quandary-logo {
-  align-items: center;
-  text-decoration: none;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  text-decoration: none;
   position: absolute;
   top: 0.5%;
 }
 
 .tooltip-text {
+  position: relative;
+  bottom: 20px;
   visibility: hidden;
   background: linear-gradient(
     90deg,
